Fixed NextCloud writing bugs and slowness and added exception at initialization if login data is wrong.